--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ name = "pyciclib"
 version = "0.1.0"
 description = "A flexible compound interest calculator."
 readme = "README.md"
-license = { file = "LICENSE" }
+license = "GPL-3.0-or-later"
 authors = [
     { name = "Fabian Bauer", email = "fab.bauer@outlook.com" }
 ]
 keywords = ["finance", "compound interest", "investment", "calculator"]
 classifiers = [
     "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
